apt (0.7.20.2ubuntu1+blankon1) nanggar; urgency=low

  * Gabungan dari versi ubuntu terbaru

 -- Muhammad Bayu <rametux@gmail.com>  Thu, 12 Feb 2009 23:55:01 +0700

apt (0.7.19ubuntu1+blankon5) nanggar; urgency=low

  * Perbaikan berkas debian/apt.postinst

 -- Muhammad Bayu <rametux@gmail.com>  Mon, 09 Feb 2009 00:22:12 +0700

apt (0.7.19ubuntu1+blankon4) nanggar; urgency=low

  * Penyempurnaan penggabungan dari ubuntu untuk blankon-keyring

 -- Muhammad Bayu <rametux@gmail.com>  Thu, 05 Feb 2009 18:53:59 +0700

apt (0.7.19ubuntu1+blankon3) nanggar; urgency=low

  * Merubah ubuntu-keyring menjadi blankon-keyring pada berkas debian/control

 -- Muhammad Bayu <rametux@gmail.com>  Wed, 04 Feb 2009 15:33:55 +0700

apt (0.7.19ubuntu1+blankon2) nanggar; urgency=low

  * Perubahan fungsi DoCmpVersion untuk menyesuaikan dengan pemversian baru blankon

 -- Muhammad Bayu <rametux@gmail.com>  Thu, 29 Jan 2009 23:36:44 +0700

apt (0.7.19ubuntu1+blankon1) nanggar; urgency=low

  * Gabungan dari ubuntu
  * Menambahkan share/blankon-archive.gpg
  * Mengubah versi dengan konvensi baru pemversian

 -- Muhammad Bayu <rametux@gmail.com>  Fri, 16 Jan 2009 01:11:35 +0700

apt (0.7.14ubuntu6-0blankon1) meuligoe; urgency=low

  * Perbaharui upstream ke versi 0.7.14ubuntu6

 -- Fajran Iman Rusadi <fajran@gmail.com>  Sun, 24 Aug 2008 00:26:32 +0700

apt (0.7.14ubuntu4-0blankon1) meuligoe; urgency=low

  * apt 0.7.14ubuntu4-0blankon1 untuk Meuligoe

 -- Fajran Iman Rusadi <fajran@gmail.com>  Tue, 05 Aug 2008 20:54:53 +0700

apt (0.7.9ubuntu17-0blankon1) lontara; urgency=low

  * Update upstream version to 0.7.9ubuntu17

 -- Fajran Iman Rusadi <fajran@gmail.com>  Wed, 23 Apr 2008 12:09:29 +0700

apt (0.7.9ubuntu16-1blankon1) lontara; urgency=low

  * Add boundary check (LP: #184476)

 -- Fajran Iman Rusadi <fajran@gmail.com>  Tue, 15 Apr 2008 23:05:07 +0000

apt (0.7.9ubuntu16-0blankon1) lontara; urgency=low

  * Update upstream to 0.7.9ubuntu16
