@@ -127,7 +127,7 @@ int debVersioningSystem::CmpFragment(const char *A,const char *AEnd,
 int debVersioningSystem::DoCmpVersion(const char *A,const char *AEnd,
 				      const char *B,const char *BEnd)
 {
-   // Strip off the epoch and compare it
+   // Strip off the epoch and compare it 
    const char *lhs = A;
    const char *rhs = B;
    for (;lhs != AEnd && *lhs != ':'; lhs++);
@@ -144,8 +144,8 @@ int debVersioningSystem::DoCmpVersion(const char *A,const char *AEnd,
       for (; *A == '0'; ++A);
       if (A == lhs)
       {
-   ++A;
-   ++lhs;
+	 ++A;
+	 ++lhs;
       }
    }
    if (rhs != B)
@@ -153,31 +153,31 @@ int debVersioningSystem::DoCmpVersion(const char *A,const char *AEnd,
       for (; *B == '0'; ++B);
       if (B == rhs)
       {
-   ++B;
-   ++rhs;
+	 ++B;
+	 ++rhs;
       }
    }
- 
+
    // Compare the epoch
    int Res = CmpFragment(A,lhs,B,rhs);
    if (Res != 0)
       return Res;
- 
+
    // Skip the :
    if (lhs != A)
       lhs++;
    if (rhs != B)
       rhs++;
    
-   // Find the last -
+   // Find the last - 
    const char *dlhs = AEnd-1;
    const char *drhs = BEnd-1;
    for (;dlhs > lhs && *dlhs != '-'; dlhs--);
    for (;drhs > rhs && *drhs != '-'; drhs--);
- 
+
    // --->8--- hapus pada nanggar+1 --->8---
    // Modifikasi #2: Geser batas revisi satu fragmen ke kiri
-   if (!getenv ("BLANKON_UBUNTU_MODE"))
+   if (!getenv ("BLANKON_UBUNTU_MODE")) 
    {
       if (dlhs < AEnd && strstr(dlhs, "blankon") && strstr(dlhs, "+blankon") == 0)
          for (dlhs--; dlhs > lhs && *dlhs != '-'; dlhs--);
@@ -185,7 +185,7 @@ int debVersioningSystem::DoCmpVersion(const char *A,const char *AEnd,
          for (drhs--; drhs > rhs && *drhs != '-'; drhs--);
    }
    // ---------------------------------->8--
- 
+
    if (dlhs == lhs)
       dlhs = AEnd;
    if (drhs == rhs)
@@ -201,7 +201,7 @@ int debVersioningSystem::DoCmpVersion(const char *A,const char *AEnd,
       dlhs++;
    if (drhs != rhs)
       drhs++;
- 
+
    if (getenv ("BLANKON_UBUNTU_MODE"))
       return CmpFragment(dlhs,AEnd,drhs,BEnd);
      
@@ -217,13 +217,13 @@ int debVersioningSystem::DoCmpVersion(const char *A,const char *AEnd,
       if (*dlhs == '~') return -1;
       return 1;
    }
- 
+
    // Modifikasi #3 dan #4 (konvensi baru)
    if (strstr (dlhs, "+blankon") && strstr (drhs, "+blankon") == 0)
       return 1;
    if (strstr (drhs, "+blankon") && strstr (dlhs, "+blankon") == 0)
       return -1;
- 
+
    // --->8--- hapus pada nanggar+1 --->8---
    // Modifikasi #4 (konvensi lama)
    if (strstr (dlhs, "blankon") && strstr (drhs, "blankon") == 0)
