@@ -10,10 +10,10 @@ GPG_CMD="gpg --ignore-time-conflict --no-options --no-default-keyring --secret-k
 GPG="$GPG_CMD --keyring /etc/apt/trusted.gpg"
 
 
-MASTER_KEYRING=/usr/share/keyrings/ubuntu-master-keyring.gpg
+MASTER_KEYRING=/usr/share/keyrings/blankon-master-keyring.gpg
 ARCHIVE_KEYRING=/usr/share/keyrings/blankon-archive-keyring.gpg
 REMOVED_KEYS=/usr/share/keyrings/blankon-archive-removed-keys.gpg
-ARCHIVE_KEYRING_URI=http://archive.ubuntu.com/ubuntu/project/ubuntu-archive-keyring.gpg
+ARCHIVE_KEYRING_URI=http://arsip.blankonlinux.or.id/blankon/project/blankon-archive-keyring.gpg
 
 add_keys_with_verify_against_master_keyring() {
     ADD_KEYRING=$1
