@@ -17,8 +17,8 @@ case "$1" in
     configure)
 
         if ! test -f /etc/apt/trusted.gpg; then
-		apt-key add /usr/share/apt/blankon-archive.gpg
-	        apt-key add /usr/share/apt/ubuntu-archive.gpg
+                apt-key add /usr/share/apt/blankon-archive.gpg
+                apt-key add /usr/share/apt/ubuntu-archive.gpg
         fi
 
     ;;
@@ -39,5 +39,6 @@ esac
 #DEBHELPER#
 
 exit 0
+
 
 
