@@ -1,8 +1,14 @@
 apt (0.7.20.2ubuntu1+blankon1) nanggar; urgency=low
 
+  [ Muhammad Bayu ]
   * Gabungan dari versi ubuntu terbaru
 
- -- Muhammad Bayu <rametux@gmail.com>  Thu, 12 Feb 2009 23:55:01 +0700
+  [ Andy Apdhani ]
+  * Sync ulang dengan apt ubuntu
+  * Update blankon-archive.gpg dengan keyring baru
+  * Perbaikan mising UFO di apt-get moo (bugs #224)
+
+ -- Andy Apdhani <imtheface@ubuntu.com>  Thu, 19 Feb 2009 20:28:39 +0700
 
 apt (0.7.19ubuntu1+blankon5) nanggar; urgency=low
 
